--- a/ChessTournament/nbproject/project.properties
+++ b/ChessTournament/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Chesstournament_V1.jar
+dist.jar=${dist.dir}/ChessTournament.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Chesstournament_V1
+dist.jlink.output=${dist.jlink.dir}/ChessTournament
 excludes=
 includes=**
 jar.compress=false
@@ -70,7 +70,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Chesstournament_V1
+jlink.launcher.name=ChessTournament
 main.class=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
