--- a/ChessTournament/nbproject/project.properties
+++ b/ChessTournament/nbproject/project.properties
@@ -73,7 +73,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=ChessTournament
-main.class=HomeFrame
+main.class=FirstRoundFrame.HomeFrame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
